# crypto-sugar

./: .travis.yml  LICENSE  README.md  cabal.project  crypto-sugar.cabal  init.sh  pkgname.cabal
app/: Main.hs
src/: Prelude.hs
src/Crypto/Sugar/: Cipher.hs  Internal.hs
test/: Main.hs
