cabal-version: 2.4

author:       Mitchell Rosen
bug-reports:  https://github.com/mitchellwrosen/crypto-sugar/issues
category:     Data
copyright:    (c) 2019, Mitchell Rosen
description:  Description
homepage:     https://github.com/mitchellwrosen/crypto-sugar
license-file: LICENSE
license:      BSD-3-Clause
maintainer:   Mitchell Rosen <mitchellwrosen@gmail.com>
name:         crypto-sugar
synopsis:     Synopsis
version:      0
tested-with:  GHC == 8.6.5

extra-source-files:
  .travis.yml
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: git://github.com/mitchellwrosen/crypto-sugar.git

common common
  build-depends:
    base ^>= 4.12,

  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnicodeSyntax
    ViewPatterns

  default-language:
    Haskell2010

  ghc-options:
    -fprint-expanded-synonyms
    -fprint-explicit-foralls
    -fprint-explicit-kinds
    -fprint-unicode-syntax
    -j
    -Wall
    -Wcompat
    -Werror=empty-enumerations
    -Werror=inaccessible-code
    -Werror=incomplete-patterns
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=overflowed-literals
    -Werror=overlapping-patterns
    -Werror=partial-fields
    -Werror=tabs
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-patterns
    -Wincomplete-uni-patterns
    -Wmissing-local-signatures
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monadfail-instances
    -Wpartial-fields
    -Wredundant-constraints

library
  import:
    common

  build-depends:
    bytestring ^>= 0.10.8,
    cryptonite == 0.26,
    memory ^>= 0.14.18,
    mmorph ^>= 1.1.3,
    streaming ^>= 0.2.2,
    streaming-bytestring ^>= 0.1.6,
    transformers ^>= 0.5.6.2,

  exposed-modules:
    Crypto.Sugar.Cipher

  hs-source-dirs:
    src

  mixins:
    base hiding (Prelude),
    base (Prelude as BasePrelude),

  other-modules:
    Crypto.Sugar.Internal
    Prelude

test-suite tests
  import:
    common,

  build-depends:
    crypto-sugar,
    hedgehog,
    tasty,
    tasty-hedgehog,

  ghc-options:
    -threaded

  hs-source-dirs:
    test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0
